--- a/example/package.json
+++ b/example/package.json
@@ -7,6 +7,9 @@
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "copy-webpack-plugin": "^4.5.1",
     "css-loader": "^0.28.11",
     "file-loader": "^1.1.11",
@@ -15,17 +18,17 @@
     "sass-loader": "^7.0.1",
     "style-loader": "^0.21.0",
     "url-loader": "^1.0.1",
-    "webpack": "^4.5.0",
-    "webpack-cli": "^2.0.14",
+    "webpack": "^4.12.0",
+    "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.3"
   },
   "dependencies": {
-    "react": "^16.3.1",
-    "react-dom": "^16.3.1",
-    "react-hot-loader": "^4.0.1",
-    "react-router-dom": "^4.2.2",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "react-hot-loader": "^4.3.3",
+    "react-router-dom": "^4.3.1",
     "react-router-redux": "^4.0.8",
-    "semantic-ui-css": "2.2.12",
-    "semantic-ui-react": "^0.80.0"
+    "semantic-ui-css": "^2.3.2",
+    "semantic-ui-react": "^0.81.1"
   }
 }
