--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "build": "rm -rf dist && babel src -d dist",
     "prepare": "yarn run build"
   },
+  "files": [
+    "redux.js"
+  ],
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-eslint": "^8.2.3",
