--- a/example/package.json
+++ b/example/package.json
@@ -26,8 +26,11 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-hot-loader": "^4.3.3",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-router-redux": "^4.0.8",
+    "redux": "^4.0.0",
+    "redux-form": "^7.4.2",
     "semantic-ui-css": "^2.3.2",
     "semantic-ui-react": "^0.81.1"
   }
