--- a/package.json
+++ b/package.json
@@ -2,10 +2,20 @@
   "name": "react-simple-address",
   "version": "1.1.0",
   "main": "dist/index.js",
+  "module": "./src/index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/abrcdf1023/react-simple-address.git"
   },
+  "keywords": [
+    "react",
+    "reactjs",
+    "redux",
+    "react-redux",
+    "redux-form",
+    "react-simple-address",
+    "decorator"
+  ],
   "author": "JerryP <egroup.jerrylee@gmail.com>",
   "license": "MIT",
   "scripts": {
@@ -13,6 +23,9 @@
     "prepare": "yarn run build"
   },
   "files": [
+    "README.md",
+    "dist",
+    "src",
     "redux.js"
   ],
   "devDependencies": {
