--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-simple-address",
   "version": "1.1.1",
-  "main": "dist/index.js",
+  "main": "./dist/index.js",
   "module": "./src/index.js",
   "repository": {
     "type": "git",
